<resources>
    <string name="app_name">FITNESS APP</string>
    <string name="noLogsMessage">No records, time to go to gym</string>
    <string name="et_hint_username">Username</string>
    <string name="et_hint_password">Password</string>
    <string name="btn_Login">Login</string>
    <string name="logout">Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logoutMenu">Logout</string>
    <string name="mainAddNewExercise">Add New</string>
    <string name="button_text_back">Back</string>
    <string name="tv_exercise_list_name">Exercise List</string>
    <string name="textView_signUp">Sign Up</string>
    <string name="editText_hint_username">Username</string>
    <string name="editText_hint_password">Password</string>
    <string name="button_signUp">sign up</string>
    <string name="et_hint_reps">Repetitions</string>
    <string name="et_hint_weight">Weight</string>
    <string name="dialog_submit">Submit</string>
    <string name="textView_login">Log In</string>
    <string name="btn_name_register">Register</string>
    <string name="tv_new_user">New user?</string>
    <string name="et_hint_workout_name">Workout name</string>
    <string name="et_hint_workout_description">Workout description</string>
    <string name="tv_welcome_msg">Welcome</string>
    <string name="activity_goals">Activity Goals</string>
    <string name="heart_rate">Heart rate</string>
    <string name="exercise">exercise</string>
    <string name="et_hint_wrist_data">Wrist Monitor</string>
    <string name="et_hint_chest_strap_data">Chest Strap Monitor</string>
    <string name="tv_heart_rate">Heart Rate</string>
    <string name="tv_activity_goals">Activity Goals</string>
    <string name="et_hint_your_activity_goal">Your Activity Goal?</string>
    <string name="noHeartRateLogs">No records, time to check heart rate</string>
    <string name="noActivityGoalLogs">No records, time to set goals</string>
    <string name="btn_txt_delete">Delete</string>
</resources>
